cluster/home/pihole/service-entry.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: pihole
  namespace: home
spec:
  hosts:
  - pihole.local
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
    targetPort: 80
  resolution: STATIC
  endpoints:
  - address: 192.168.30.30
